--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex"/>
+    <meta name="description" content="This is a test description">
     <link rel="stylesheet" href="covid.css">
     <title>covid-19-estimator</title>
 </head>
